why do plots look like that um

--- a/notebooks/anphy_code/csv_creation.ipynb
+++ b/notebooks/anphy_code/csv_creation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,12 +213,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing subject: EPCTL01\n",
-      "Extracting EDF parameters from /Users/kimberly/Documents/STAT4830/STAT-4830-GOALZ-project/Anphy Dataset/EPCTL01/EPCTL01.edf...\n",
-      "EDF file detected\n",
-      "Setting channel info structure...\n",
-      "Creating raw.info structure...\n",
-      "Reading 0 ... 28737999  =      0.000 ... 28737.999 secs...\n"
+      "Processing subject: EPCTL01\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'process_subject' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m subject_id \u001b[38;5;129;01min\u001b[39;00m DataConfig\u001b[38;5;241m.\u001b[39mSUBJECTS:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mProcessing subject: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msubject_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m     raw \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_subject\u001b[49m(subject_id)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'process_subject' is not defined"
      ]
     }
    ],
@@ -246,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
