--- a/notebooks/anphy_code/sampling_N1_W.ipynb
+++ b/notebooks/anphy_code/sampling_N1_W.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
     "from scipy.signal import butter, filtfilt, resample_poly\n",
     "from scipy.signal import iirnotch, filtfilt\n",
     "from scipy.signal import find_peaks\n",
-    "from multiprocessing import Pool, cpu_count"
+    "from multiprocessing import Pool, cpu_count\n",
+    "from config.config import DataConfig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"/Users/tereza/spring_2025/STAT_4830/STAT-4830-GOALZ-project/data/ANPHY-Sleep_data\"\n",
+    "data_dir = DataConfig.BASE_PATH\n",
     "subject_dirs = sorted([d for d in os.listdir(data_dir)\n",
     "                       if d.lower().startswith(\"epctl\") and os.path.isdir(os.path.join(data_dir, d))])"
    ]
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
