--- a/notebooks/anphy_code/anp_visualizing_stem.ipynb
+++ b/notebooks/anphy_code/anp_visualizing_stem.ipynb
@@ -422,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cnt_gen",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
