--- a/notebooks/anphy_code/segment_lengths_and_counts.ipynb
+++ b/notebooks/anphy_code/segment_lengths_and_counts.ipynb
@@ -1193,7 +1193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cnt_gen",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
