--- a/notebooks/tfm_w_analytics.ipynb
+++ b/notebooks/tfm_w_analytics.ipynb
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "id": "NwT759n5v4Xp"
       },
@@ -491,12 +491,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 15,
       "metadata": {
         "id": "KEjycEGMwWZk"
       },
       "outputs": [],
       "source": [
+        "# SPLIT BY PATIENT AND HAVE WHOLE NIGHT INSTEAD \n",
+        "\n",
         "def main():\n",
         "    # Load dataset from processed sequence NPZ files\n",
         "    dataset = SleepSequenceDataset(DATA_DIR)\n",
@@ -537,6 +539,59 @@
         "\n",
         "    # Save the model checkpoint in RESULT_DIR\n",
         "    torch.save(model.state_dict(), os.path.join(RESULT_DIR, 'sleep_transformer_model.pth'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dataset = SleepSequenceDataset(DATA_DIR)\n",
+        "total_len = len(dataset)\n",
+        "train_len = int(TRAIN_VAL_SPLIT * total_len)\n",
+        "val_len = total_len - train_len\n",
+        "train_dataset, val_dataset = random_split(dataset, [train_len, val_len])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2804"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(train_dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "701"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(val_dataset)"
       ]
     },
     {
