--- a/MESA_prepro2.ipynb
+++ b/MESA_prepro2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64871385",
+   "id": "faaed141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "\n",
-    "CHANNELS_TO_LOAD = [\"EEG Fz-Cz\", \"EOG L\", \"EOG R\"]  # Adjust based on available channels\n",
+    "CHANNELS_TO_LOAD = [\"EEG Fz-Cz\", \"EOG-L\", \"EOG-R\"]  # Adjust based on available channels\n",
     "TARGET_SFREQ = 256.0\n",
     "LOW_FREQ = 0.5\n",
     "HIGH_FREQ = 30.0\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ccc8d0b",
+   "id": "e97651e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,22 +158,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "base",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "name": "python"
   }
  },
  "nbformat": 4,
