--- a/notebooks/mesa_code/MESA_preopro.ipynb
+++ b/notebooks/mesa_code/MESA_preopro.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64871385",
+   "execution_count": 4,
+   "id": "b85afebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,72 @@
     "import mne\n",
     "import xml.etree.ElementTree as ET\n",
     "from scipy.signal import butter, filtfilt, iirnotch, welch\n",
-    "from joblib import Parallel, delayed\n",
-    "\n",
+    "from joblib import Parallel, delayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "88668f4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Configuration\n",
-    "BASE_DIR = '/path/to/mesa/dataset'  # Update this to your MESA dataset directory\n",
-    "EDF_DIR = os.path.join(BASE_DIR, 'polysomnography/edfs')\n",
-    "ANNOTATION_DIR = os.path.join(BASE_DIR, 'polysomnography/annotations-events-nsrr')\n",
-    "OUTPUT_DIR = '/path/to/output/processed_mesa'\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
+    "BASE_DIR = \"../../data/MESA\"\n",
+    "EDF_DIR = os.path.join(BASE_DIR, 'edfs')\n",
+    "ANNOTATION_DIR = os.path.join(BASE_DIR, 'mesa_200_annotations-events-nssr')\n",
+    "OUTPUT_DIR = '../../processed_mesa'\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "85e7e926",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 200 EDF files to process across specified directories.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Locate all EDF files across multiple subdirectories ---\n",
+    "# List of directory names containing EDFs under BASE_DIR\n",
+    "edf_subdir_names = ['mesa_200_subset_edfs'] + [f'mesa_200_subset_edfs {i}' for i in range(2, 19)]\n",
+    "all_edf_files = []\n",
+    "for subdir_name in edf_subdir_names:\n",
+    "    dir_path = os.path.join(EDF_DIR, subdir_name)\n",
+    "    if os.path.isdir(dir_path):\n",
+    "        edf_files_in_subdir = glob.glob(os.path.join(dir_path, '*.edf')) + \\\n",
+    "                              glob.glob(os.path.join(dir_path, '*.EDF'))\n",
+    "        all_edf_files.extend(edf_files_in_subdir)\n",
+    "    else:\n",
+    "        print(f\"Warning: Directory not found - {dir_path}\")\n",
     "\n",
+    "# Remove duplicates if any file exists in multiple lists and sort\n",
+    "all_edf_files = sorted(list(set(all_edf_files)))\n",
     "\n",
-    "CHANNELS_TO_LOAD = [\"EEG Fz-Cz\", \"EOG L\", \"EOG R\"]  # Adjust based on available channels\n",
+    "print(f\"Found {len(all_edf_files)} EDF files to process across specified directories.\")\n",
+    "# --- End of EDF file location ---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "64871385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EEG 1 is the same as EEG Fz-Cz\n",
+    "# EEG 2 is the same as EEG Cz-Oz\n",
+    "# EEG 3 is the same as EEG C4 M1\n",
+    "# Kim's source: https://sleepdata.org/datasets/mesa/pages/equipment/montage-and-sampling-rate-information.md \n",
+    "\n",
+    "CHANNELS_TO_LOAD = [\"EEG 1\", \"EOG L\", \"EOG R\"]  # Adjust based on available channels\n",
     "TARGET_SFREQ = 256.0\n",
     "LOW_FREQ = 0.5\n",
     "HIGH_FREQ = 30.0\n",
@@ -83,10 +138,10 @@
     "    raw.filter(l_freq=low_freq, h_freq=high_freq, picks=picks, verbose=False)\n",
     "\n",
     "    # Apply notch to each picked channel individually (MNE doesn't support adaptive notch out-of-the-box)\n",
-    "    for ch in picks:\n",
+    "    for i, ch in enumerate(picks):\n",
     "        signal = raw.get_data(picks=[ch])[0]\n",
     "        filtered = auto_notch_filter(signal, fs=raw.info['sfreq'], center_guess=60.0)\n",
-    "        raw._data[picks.index(ch)] = filtered\n",
+    "        raw._data[ch] = filtered\n",
     "\n",
     "    annotations = parse_xml_annotations(xml_path)\n",
     "\n",
@@ -142,10 +197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "0ccc8d0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 200 PSG files.\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    psg_files = glob.glob(os.path.join(EDF_DIR, \"*.edf\"))\n",
@@ -159,7 +222,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
