--- a/notebooks/mesa_code/MESA_preopro.ipynb
+++ b/notebooks/mesa_code/MESA_preopro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b85afebc",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "88668f4e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "85e7e926",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
+   "id": "3cc9a95c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of already-processed PSG recording IDs (without .edf)\n",
+    "PROCESSED_ALREADY = [\n",
+    "    \"mesa-sleep-0167\",\n",
+    "    \"mesa-sleep-0359\",\n",
+    "    \"mesa-sleep-0629\",\n",
+    "    \"mesa-sleep-0601\",\n",
+    "    \"mesa-sleep-0211\",\n",
+    "    \"mesa-sleep-0563\",\n",
+    "    \"mesa-sleep-0204\",\n",
+    "    \"mesa-sleep-0589\",\n",
+    "    \"mesa-sleep-0006\",\n",
+    "    \"mesa-sleep-0012\",\n",
+    "    \"mesa-sleep-0628\",\n",
+    "    \"mesa-sleep-0614\",\n",
+    "    \"mesa-sleep-0402\",\n",
+    "    \"mesa-sleep-0399\",\n",
+    "    \"mesa-sleep-0416\",\n",
+    "    \"mesa-sleep-0414\",\n",
+    "    \"mesa-sleep-0372\",\n",
+    "    \"mesa-sleep-0602\",\n",
+    "    \"mesa-sleep-0038\",\n",
+    "    \"mesa-sleep-0548\",\n",
+    "    \"mesa-sleep-0561\",\n",
+    "    \"mesa-sleep-0159\",\n",
+    "    \"mesa-sleep-0171\",\n",
+    "    \"mesa-sleep-0388\",\n",
+    "    \"mesa-sleep-0415\",\n",
+    "    \"mesa-sleep-0363\",\n",
+    "    \"mesa-sleep-0149\",\n",
+    "    \"mesa-sleep-0001\",\n",
+    "    \"mesa-sleep-0565\",\n",
+    "    \"mesa-sleep-0558\",\n",
+    "    \"mesa-sleep-0014\",\n",
+    "    \"mesa-sleep-0028\",\n",
+    "    \"mesa-sleep-0612\",\n",
+    "    \"mesa-sleep-0604\",\n",
+    "    \"mesa-sleep-0002\",\n",
+    "    \"mesa-sleep-0016\",\n",
+    "    \"mesa-sleep-0572\",\n",
+    "    \"mesa-sleep-0599\",\n",
+    "    \"mesa-sleep-0474\",\n",
+    "    \"mesa-sleep-0188\",\n",
+    "    \"mesa-sleep-0312\",\n",
+    "    \"mesa-sleep-0460\",\n",
+    "    \"mesa-sleep-0306\",\n",
+    "    \"mesa-sleep-0138\",\n",
+    "    \"mesa-sleep-0110\",\n",
+    "    \"mesa-sleep-0064\",\n",
+    "    \"mesa-sleep-0070\",\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "64871385",
    "metadata": {},
    "outputs": [],
@@ -176,28 +235,43 @@
     "\n",
     "def process_and_save(psg_file, output_dir, channels):\n",
     "    \"\"\"Process and save data for a single PSG file.\"\"\"\n",
-    "    xml_file = os.path.join(ANNOTATION_DIR, os.path.basename(psg_file).replace(\".edf\", \"-nsrr.xml\"))\n",
+    "    rec_id = os.path.basename(psg_file).replace(\".edf\", \"\")\n",
+    "    \n",
+    "    if rec_id in PROCESSED_ALREADY:\n",
+    "        print(f\"Skipping {rec_id}: already processed.\")\n",
+    "        return\n",
+    "\n",
+    "    xml_file = os.path.join(ANNOTATION_DIR, rec_id + \"-nsrr.xml\")\n",
     "    if not os.path.exists(xml_file):\n",
     "        print(f\"Annotation file not found for {psg_file}, skipping.\")\n",
     "        return\n",
     "    try:\n",
     "        data, labels, ch_names = process_record(psg_file, xml_file, channels,\n",
     "                                                TARGET_SFREQ, LOW_FREQ, HIGH_FREQ, EPOCH_LENGTH)\n",
+    "        \n",
+    "        if data.shape[0] == 0 or labels.shape[0] == 0:\n",
+    "            print(f\"No valid epochs for {psg_file}, skipping.\")\n",
+    "            return\n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {psg_file}: {e}\")\n",
     "        return\n",
-    "    rec_id = os.path.basename(psg_file).replace(\".edf\", \"\")\n",
-    "    np.savez_compressed(os.path.join(output_dir, f\"{rec_id}_epochs.npz\"),\n",
-    "                        data=data.astype('float32'), labels=labels.astype('int8'))\n",
-    "    sequences, seq_labels = create_sequences(data, labels, SEQ_LENGTH, SEQ_STRIDE)\n",
-    "    np.savez_compressed(os.path.join(output_dir, f\"{rec_id}_sequences.npz\"),\n",
-    "                        sequences=sequences.astype('float32'), seq_labels=seq_labels.astype('int8'))\n",
-    "    print(f\"Processed {rec_id}: epochs {data.shape[0]}, sequences {sequences.shape[0]}, channels: {ch_names}\")"
+    "\n",
+    "    try:\n",
+    "        np.savez_compressed(os.path.join(output_dir, f\"{rec_id}_epochs.npz\"),\n",
+    "                            data=data.astype('float32'), labels=labels.astype('int8'))\n",
+    "        sequences, seq_labels = create_sequences(data, labels, SEQ_LENGTH, SEQ_STRIDE)\n",
+    "        np.savez_compressed(os.path.join(output_dir, f\"{rec_id}_sequences.npz\"),\n",
+    "                            sequences=sequences.astype('float32'), seq_labels=seq_labels.astype('int8'))\n",
+    "        print(f\"Processed {rec_id}: epochs {data.shape[0]}, sequences {sequences.shape[0]}, channels: {ch_names}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving {psg_file}: {e}\")\n",
+    "        return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0ccc8d0b",
    "metadata": {},
    "outputs": [
@@ -205,7 +279,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 200 PSG files.\n"
+      "Found 200 PSG files.\n",
+      "Skipping mesa-sleep-0167: already processed.\n",
+      "Skipping mesa-sleep-0359: already processed.\n",
+      "Skipping mesa-sleep-0601: already processed.\n",
+      "Skipping mesa-sleep-0629: already processed.\n",
+      "Skipping mesa-sleep-0563: already processed.\n",
+      "Skipping mesa-sleep-0211: already processed.\n",
+      "Skipping mesa-sleep-0204: already processed.\n",
+      "Skipping mesa-sleep-0589: already processed.\n",
+      "Skipping mesa-sleep-0012: already processed.\n",
+      "Skipping mesa-sleep-0006: already processed.\n",
+      "Skipping mesa-sleep-0628: already processed.\n",
+      "Skipping mesa-sleep-0614: already processed.\n",
+      "Skipping mesa-sleep-0402: already processed.\n",
+      "Skipping mesa-sleep-0416: already processed.\n",
+      "Skipping mesa-sleep-0399: already processed.\n",
+      "Skipping mesa-sleep-0414: already processed.\n",
+      "Skipping mesa-sleep-0372: already processed.\n",
+      "Skipping mesa-sleep-0602: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0560.edf: No matching events found for 5 (event id 4)\n",
+      "Skipping mesa-sleep-0548: already processed.\n",
+      "Skipping mesa-sleep-0561: already processed.\n",
+      "Skipping mesa-sleep-0159: already processed.\n",
+      "Skipping mesa-sleep-0171: already processed.\n",
+      "Skipping mesa-sleep-0415: already processed.\n",
+      "Skipping mesa-sleep-0388: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0010.edf: No matching events found for 5 (event id 4)\n",
+      "Skipping mesa-sleep-0038: already processed.\n",
+      "Skipping mesa-sleep-0363: already processed.\n",
+      "Skipping mesa-sleep-0149: already processed.\n",
+      "Skipping mesa-sleep-0001: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0405.edf: No matching events found for 3 (event id 3)\n",
+      "Skipping mesa-sleep-0565: already processed.\n",
+      "Skipping mesa-sleep-0558: already processed.\n",
+      "Skipping mesa-sleep-0014: already processed.\n",
+      "Skipping mesa-sleep-0028: already processed.\n",
+      "Skipping mesa-sleep-0612: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0571.edf: No matching events found for 3 (event id 3)\n",
+      "Skipping mesa-sleep-0016: already processed.\n",
+      "Skipping mesa-sleep-0599: already processed.\n",
+      "Skipping mesa-sleep-0572: already processed.\n",
+      "Skipping mesa-sleep-0188: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0374.edf: No matching events found for 3 (event id 3)\n",
+      "Skipping mesa-sleep-0604: already processed.\n",
+      "Skipping mesa-sleep-0002: already processed.\n",
+      "Skipping mesa-sleep-0474: already processed.\n",
+      "Skipping mesa-sleep-0312: already processed.\n",
+      "Skipping mesa-sleep-0306: already processed.\n",
+      "Skipping mesa-sleep-0460: already processed.\n",
+      "Skipping mesa-sleep-0110: already processed.\n",
+      "Skipping mesa-sleep-0138: already processed.\n",
+      "Skipping mesa-sleep-0064: already processed.\n",
+      "Skipping mesa-sleep-0070: already processed.\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0407.edf: No matching events found for 3 (event id 3)\n",
+      "Processed mesa-sleep-0528: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0299: epochs 1319, sequences 130, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0501: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0529: epochs 1439, sequences 142, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0105: epochs 1245, sequences 123, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0111: epochs 1319, sequences 130, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0488: epochs 1320, sequences 131, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0339: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0107: epochs 1439, sequences 142, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0113: epochs 1439, sequences 142, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0271: epochs 1199, sequences 118, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0258: epochs 1199, sequences 118, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0099: epochs 1259, sequences 124, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0338.edf: No matching events found for 3 (event id 3)\n",
+      "Processed mesa-sleep-0476: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0310: epochs 1199, sequences 118, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0328.edf: No matching events found for 3 (event id 3)\n",
+      "Processed mesa-sleep-0499: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0314: epochs 1079, sequences 106, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0512: epochs 1199, sequences 118, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0248: epochs 1439, sequences 142, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0275: epochs 1199, sequences 118, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Processed mesa-sleep-0077: epochs 1200, sequences 119, channels: ['EKG', 'EOG-L', 'EOG-R', 'EMG', 'EEG1', 'EEG2', 'EEG3', 'Pres', 'Flow', 'Snore', 'Thor', 'Abdo', 'Leg', 'Therm', 'Pos', 'EKG_Off', 'EOG-L_Off', 'EOG-R_Off', 'EMG_Off', 'EEG1_Off', 'EEG2_Off', 'EEG3_Off', 'Pleth', 'OxStatus', 'SpO2', 'HR', 'DHR']\n",
+      "Error processing ../../data/MESA/edfs/mesa-sleep-0301.edf: No matching events found for 3 (event id 3)\n"
      ]
     }
    ],
