--- a/notebooks/mesa_code/MESA_preopro_fixed.ipynb
+++ b/notebooks/mesa_code/MESA_preopro_fixed.ipynb
@@ -169,6 +169,8 @@
     "    epochs = mne.Epochs(raw, events=events, event_id=ANNOTATION_MAP, tmin=tmin, tmax=tmax,\n",
     "                        baseline=None, preload=True, verbose=False)\n",
     "    data = epochs.get_data()\n",
+    "# Select only desired channels from data\n",
+    "data = data[:, channel_indices]\n",
     "    labels = epochs.events[:, -1]\n",
     "\n",
     "    for ch in range(data.shape[1]):\n",
