adding gnn attempt and preprocessing for all of the sleepedf

--- a/notebooks/sleepedf_code/sleepedf_prepro_all.ipynb
+++ b/notebooks/sleepedf_code/sleepedf_prepro_all.ipynb
@@ -1396,6 +1396,40 @@
       "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Channels contain different lowpass filters. Lowest filter setting will be stored.\n",
       "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Highpass cutoff frequency 16.0 is greater than lowpass cutoff frequency 0.7, setting values to 0 and Nyquist.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used Annotations descriptions: [np.str_('Sleep stage 1'), np.str_('Sleep stage 2'), np.str_('Sleep stage 3'), np.str_('Sleep stage 4'), np.str_('Sleep stage R'), np.str_('Sleep stage W')]\n",
+      "Processed SC4101E0: epochs 2719, sequences 270, channels: ['EEG Fpz-Cz', 'EEG Pz-Oz', 'EOG horizontal', 'Resp oro-nasal', 'EMG submental', 'Temp rectal', 'Event marker']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Channels contain different highpass filters. Highest filter setting will be stored.\n",
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Channels contain different lowpass filters. Lowest filter setting will be stored.\n",
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Highpass cutoff frequency 16.0 is greater than lowpass cutoff frequency 0.7, setting values to 0 and Nyquist.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used Annotations descriptions: [np.str_('Sleep stage 1'), np.str_('Sleep stage 2'), np.str_('Sleep stage 3'), np.str_('Sleep stage 4'), np.str_('Sleep stage R'), np.str_('Sleep stage W')]\n",
+      "Processed SC4811G0: epochs 2402, sequences 239, channels: ['EEG Fpz-Cz', 'EEG Pz-Oz', 'EOG horizontal', 'Resp oro-nasal', 'EMG submental', 'Temp rectal', 'Event marker']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Channels contain different highpass filters. Highest filter setting will be stored.\n",
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Channels contain different lowpass filters. Lowest filter setting will be stored.\n",
+      "/var/folders/fq/t46mbxyj54j1d9t60j44v_j80000gn/T/ipykernel_88349/2190940151.py:31: RuntimeWarning: Highpass cutoff frequency 16.0 is greater than lowpass cutoff frequency 0.7, setting values to 0 and Nyquist.\n"
+     ]
     }
    ],
    "source": [
