adding final model

--- a/notebooks/sleepedf_code/sleepedf_prepro.ipynb
+++ b/notebooks/sleepedf_code/sleepedf_prepro.ipynb
@@ -24,11 +24,11 @@
     "OUTPUT_DIR = os.path.join(PROJECT_ROOT, 'psd_sleep_edf')\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
-    "USE_MULTIPLE_CHANNELS = True\n",
-    "if USE_MULTIPLE_CHANNELS:\n",
-    "    CHANNELS_TO_LOAD = [\"EEG Fpz-Cz\", \"EOG horizontal\"]\n",
-    "else:\n",
-    "    CHANNELS_TO_LOAD = [\"EEG Fpz-Cz\"]\n",
+    "# USE_MULTIPLE_CHANNELS = True\n",
+    "# if USE_MULTIPLE_CHANNELS:\n",
+    "#     CHANNELS_TO_LOAD = [\"EEG Fpz-Cz\", \"EOG horizontal\"]\n",
+    "# else:\n",
+    "#     CHANNELS_TO_LOAD = [\"EEG Fpz-Cz\"]\n",
     "\n",
     "TARGET_SFREQ = 100.0\n",
     "LOW_FREQ = 0.5\n",
